[gd_scene load_steps=74 format=3 uid="uid://bjrk5kxpv2mrq"]

[ext_resource type="Script" uid="uid://br55lwbg3itro" path="res://Entities/Player/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://cl4k1gietd5kd" path="res://UI/PlayerHearts/player_hearts_ui.tscn" id="2_nhbkt"]
[ext_resource type="Shader" uid="uid://c1ejlcnxqs3m0" path="res://Entities/Player/player_shader.gdshader" id="2_r8fok"]
[ext_resource type="Script" uid="uid://b3xkwxuf8a1a" path="res://Components/AreaDetection/hitbox.gd" id="3_fkugw"]
[ext_resource type="Texture2D" uid="uid://b0ocq0relo4oi" path="res://Assets/Sprites/Player/blockout_top_down.png" id="3_lub02"]
[ext_resource type="Texture2D" uid="uid://ds6keo5tbk1v2" path="res://Assets/Sprites/PlayerAttack/hitbox.png" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://63sbpv1faiyx" path="res://Components/AreaDetection/hurtbox.gd" id="5_8fjmc"]
[ext_resource type="Script" uid="uid://bnrcirklk1nl7" path="res://Resources/AttackEffectResources/attack_effect.gd" id="5_iplt1"]
[ext_resource type="Script" uid="uid://cej0ljjf57lre" path="res://Resources/AttackEffectResources/slow_effect.gd" id="7_owvpp"]
[ext_resource type="Script" uid="uid://c6nd4i5durrew" path="res://Resources/AttackEffectResources/damage_effect.gd" id="9_nhbkt"]
[ext_resource type="Script" uid="uid://dx7savleyp0lc" path="res://Resources/AttackEffectResources/knockback_effect.gd" id="9_r8fok"]
[ext_resource type="Script" uid="uid://dbbq22bwjwilb" path="res://Entities/Player/player_camera.gd" id="16_nhbkt"]
[ext_resource type="Script" uid="uid://disun15mfvhrx" path="res://Components/stats_component.gd" id="16_vskfa"]
[ext_resource type="Resource" uid="uid://b0movho6k36bx" path="res://ResourceData/EntityData/player_stats.tres" id="17_pjcup"]
[ext_resource type="Texture2D" uid="uid://r36vvkjt4q7m" path="res://Assets/Sprites/Slash.png" id="17_ppdlg"]
[ext_resource type="Texture2D" uid="uid://coffnvwaytcas" path="res://Assets/Sprites/Shadow/shadow.png" id="17_vskfa"]
[ext_resource type="AnimationLibrary" uid="uid://b4gh1fdovqfjj" path="res://AnimationLibs/basic_melee_slash3.res" id="18_01ng6"]
[ext_resource type="AnimationLibrary" uid="uid://dlbtmlj27pbj1" path="res://AnimationLibs/basic_melee_slash_1.res" id="19_ui1ln"]
[ext_resource type="AnimationLibrary" uid="uid://c7s3fx3luyiso" path="res://AnimationLibs/basic_melee_slash_2.res" id="20_og23y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pjcup"]
shader = ExtResource("2_r8fok")
shader_parameter/flash = false
shader_parameter/transparent = false
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2wvv"]
size = Vector2(10, 9.5)

[sub_resource type="Resource" id="Resource_nhbkt"]
script = ExtResource("9_r8fok")
_knockback_force = 200
_knockback_duration = 0.1
metadata/_custom_type_script = "uid://dx7savleyp0lc"

[sub_resource type="Resource" id="Resource_vskfa"]
script = ExtResource("9_nhbkt")
_damage = 1
metadata/_custom_type_script = "uid://c6nd4i5durrew"

[sub_resource type="Resource" id="Resource_xr8lj"]
script = ExtResource("7_owvpp")
slowed_factor = 0.5
slowed_duration = 1.0
metadata/_custom_type_script = "uid://cej0ljjf57lre"

[sub_resource type="CircleShape2D" id="CircleShape2D_01a4e"]

[sub_resource type="Resource" id="Resource_pjcup"]
script = ExtResource("9_r8fok")
_knockback_force = 200
_knockback_duration = 0.1
metadata/_custom_type_script = "uid://dx7savleyp0lc"

[sub_resource type="Resource" id="Resource_0poeq"]
script = ExtResource("9_nhbkt")
_damage = 1
metadata/_custom_type_script = "uid://c6nd4i5durrew"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0poeq"]
size = Vector2(18, 46)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_01ng6"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ui1ln"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_og23y"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u86q5"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_01ng6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_01ng6")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ui1ln")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_og23y")
blend_point_2/pos = Vector2(0.9, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_u86q5")
blend_point_3/pos = Vector2(-0.9, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_80ryp"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v27kq"]
animation = &"run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kx1i7"]
animation = &"run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w51ui"]
animation = &"run_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_slvv8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_80ryp")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_v27kq")
blend_point_1/pos = Vector2(-0.9, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_kx1i7")
blend_point_2/pos = Vector2(0.9, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_w51ui")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_avsg8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dv6dp"]
advance_mode = 2
advance_expression = "velocity"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kx1i7"]
advance_mode = 2
advance_expression = "!velocity"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_slvv8"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_01ng6")
states/Idle/position = Vector2(384, 100)
states/Running/node = SubResource("AnimationNodeBlendSpace2D_slvv8")
states/Running/position = Vector2(606, 100)
states/Start/position = Vector2(202, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_avsg8"), "Idle", "Running", SubResource("AnimationNodeStateMachineTransition_dv6dp"), "Running", "Idle", SubResource("AnimationNodeStateMachineTransition_kx1i7")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_slvv8"]
animation = &"basic_melee_slash_1/slash_left_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l3oqu"]
animation = &"basic_melee_slash_1/slash_right_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_53w1c"]
animation = &"basic_melee_slash_1/slash_down_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_siu7b"]
animation = &"basic_melee_slash_1/slash_up_1"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_c0fwy"]
blend_point_0/node = SubResource("AnimationNodeAnimation_slvv8")
blend_point_0/pos = Vector2(-0.9, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_l3oqu")
blend_point_1/pos = Vector2(0.9, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_53w1c")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_siu7b")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v7p16"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a8wow"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w51ui"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_01ng6"]
advance_mode = 2
advance_expression = "_state == State.IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ui1ln"]
advance_mode = 2
advance_expression = "_state == State.RUNNING"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_og23y"]
advance_mode = 2
advance_expression = "_state == State.IDLE"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_w51ui"]
states/End/position = Vector2(884.5, 100.829)
states/KnockbackState/node = SubResource("AnimationNodeBlendSpace2D_01ng6")
states/KnockbackState/position = Vector2(452, 231)
states/MoveState/node = SubResource("AnimationNodeStateMachine_slvv8")
states/MoveState/position = Vector2(363, 100.829)
states/Start/position = Vector2(204.5, 99.4531)
states/ToolState/node = SubResource("AnimationNodeBlendSpace2D_c0fwy")
states/ToolState/position = Vector2(572, 101.966)
transitions = ["Start", "MoveState", SubResource("AnimationNodeStateMachineTransition_v7p16"), "MoveState", "ToolState", SubResource("AnimationNodeStateMachineTransition_a8wow"), "ToolState", "MoveState", SubResource("AnimationNodeStateMachineTransition_w51ui"), "MoveState", "KnockbackState", SubResource("AnimationNodeStateMachineTransition_01ng6"), "KnockbackState", "MoveState", SubResource("AnimationNodeStateMachineTransition_ui1ln"), "ToolState", "KnockbackState", SubResource("AnimationNodeStateMachineTransition_og23y")]
graph_offset = Vector2(49, 47)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_og23y"]
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_w51ui")
nodes/StateMachine/position = Vector2(10, 140)
node_connections = [&"output", 0, &"StateMachine"]

[sub_resource type="Animation" id="Animation_kx1i7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/transparent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox:_is_invincible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v27kq"]
resource_name = "damaged_effects"
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shake_camera"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/flash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox:_is_invincible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/transparent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w51ui"]
_data = {
&"RESET": SubResource("Animation_kx1i7"),
&"damaged_effects": SubResource("Animation_v27kq")
}

[sub_resource type="Animation" id="Animation_gds62"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.78729]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponPivot/Slash:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponPivot/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WeaponPivot/Slash:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.996078, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qv8uv"]
resource_name = "idle_down"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1ii4q"]
resource_name = "idle_left"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}

[sub_resource type="Animation" id="Animation_520x1"]
resource_name = "idle_right"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_mycwr"]
resource_name = "idle_up"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_v7p16"]
resource_name = "knockedback"
loop_mode = 1

[sub_resource type="Animation" id="Animation_0bw0x"]
resource_name = "run_down"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 0]
}

[sub_resource type="Animation" id="Animation_d17g3"]
resource_name = "run_left"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25, 26, 27, 21]
}

[sub_resource type="Animation" id="Animation_23o0h"]
resource_name = "run_right"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20, 14]
}

[sub_resource type="Animation" id="Animation_pagiw"]
resource_name = "run_up"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 7]
}

[sub_resource type="Animation" id="Animation_fyltw"]

[sub_resource type="Animation" id="Animation_1birn"]

[sub_resource type="Animation" id="Animation_58aja"]

[sub_resource type="Animation" id="Animation_mr25g"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0poeq"]
_data = {
&"RESET": SubResource("Animation_gds62"),
&"idle_down": SubResource("Animation_qv8uv"),
&"idle_left": SubResource("Animation_1ii4q"),
&"idle_right": SubResource("Animation_520x1"),
&"idle_up": SubResource("Animation_mycwr"),
&"knockback": SubResource("Animation_v7p16"),
&"run_down": SubResource("Animation_0bw0x"),
&"run_left": SubResource("Animation_d17g3"),
&"run_right": SubResource("Animation_23o0h"),
&"run_up": SubResource("Animation_pagiw"),
&"use_tool_down": SubResource("Animation_fyltw"),
&"use_tool_left": SubResource("Animation_1birn"),
&"use_tool_right": SubResource("Animation_58aja"),
&"use_tool_up": SubResource("Animation_mr25g")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_pjcup")
position = Vector2(0, -8)
texture = ExtResource("3_lub02")
hframes = 7
vframes = 4

[node name="PlayerCollisionBody" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.75)
shape = SubResource("RectangleShape2D_d2wvv")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 8
collision_mask = 0
script = ExtResource("5_8fjmc")
metadata/_custom_type_script = "uid://63sbpv1faiyx"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 7.25)
shape = SubResource("RectangleShape2D_d2wvv")

[node name="HitBox" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2(0, -8)
collision_layer = 0
collision_mask = 32
script = ExtResource("3_fkugw")
attack_effects = Array[ExtResource("5_iplt1")]([SubResource("Resource_nhbkt"), SubResource("Resource_vskfa"), SubResource("Resource_xr8lj")])
metadata/_custom_type_script = "uid://b3xkwxuf8a1a"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
unique_name_in_owner = true
scale = Vector2(3.13848, 3.13848)
shape = SubResource("CircleShape2D_01a4e")
disabled = true

[node name="HitEffects" type="Sprite2D" parent="HitBox"]
visible = false
modulate = Color(1, 1, 1, 0.32549)
show_behind_parent = true
texture = ExtResource("3_qhqgy")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
position = Vector2(0, -8)
current = true

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2(0, -8)
script = ExtResource("16_nhbkt")

[node name="ShadowSprite" type="Sprite2D" parent="."]
position = Vector2(0, 3)
texture = ExtResource("17_vskfa")

[node name="StatsComponents" type="Node" parent="."]
script = ExtResource("16_vskfa")
_stats = ExtResource("17_pjcup")
metadata/_custom_type_script = "uid://disun15mfvhrx"

[node name="PlayerHeartsUI" parent="." node_paths=PackedStringArray("_stats_component") instance=ExtResource("2_nhbkt")]
offset_top = -30.0
offset_bottom = -30.0
_stats_component = NodePath("../StatsComponents")

[node name="WeaponPivot" type="Marker2D" parent="."]
position = Vector2(0, -8)
rotation = 1.78729

[node name="Slash" type="Sprite2D" parent="WeaponPivot"]
modulate = Color(1, 0.996078, 1, 1)
scale = Vector2(2.14234, 2.3327)
texture = ExtResource("17_ppdlg")
hframes = 4
vframes = 5

[node name="HitBox" type="Area2D" parent="WeaponPivot"]
collision_layer = 0
collision_mask = 32
script = ExtResource("3_fkugw")
attack_effects = Array[ExtResource("5_iplt1")]([SubResource("Resource_pjcup"), SubResource("Resource_0poeq")])
metadata/_custom_type_script = "uid://b3xkwxuf8a1a"

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponPivot/HitBox"]
position = Vector2(-17, 1.90798e-07)
shape = SubResource("RectangleShape2D_0poeq")
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_og23y")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/StateMachine/KnockbackState/blend_position = Vector2(0.00339556, -0.0329671)
parameters/StateMachine/MoveState/Idle/blend_position = 0.0
parameters/StateMachine/MoveState/Running/blend_position = Vector2(0, 0)
parameters/StateMachine/ToolState/blend_position = Vector2(0, 0.985267)

[node name="CombatEffects" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w51ui")
}

[node name="ComboTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0poeq"),
&"basic_melee_slash3": ExtResource("18_01ng6"),
&"basic_melee_slash_1": ExtResource("19_ui1ln"),
&"basic_melee_slash_2": ExtResource("20_og23y")
}
